
		CHANGES in `multcomp' VERSION 1.2-0

    o   demos for "Multiple Comparisons Using R" by
        Bretz, Hothorn & Westfall (2010)


		CHANGES in `multcomp' VERSION 1.1-8

    o   example on simultaneous tests against one- and
        two-sided alternatives in ?glht.


		CHANGES in `multcomp' VERSION 1.1-7

    o   mix of alternatives is currently not supported 
        and also mcp() gives and error now.


		CHANGES in `multcomp' VERSION 1.1-6

    o   quantiles for confidence intervals
        used `tail = upper.tail' for `alternative = less'
        and `tail = lower.tail' for `alternative = greater'.
        This has been changed.

    o   prepare for multcomp book:
        - SAS code in inst/MCMT
        - new demos

    o   source code for simulations with unbalanced heteroscedstic
        designs added


		CHANGES in `multcomp' VERSION 1.1-5

    o   fix small problems in `cld' spotted by 
        Peter B. Mandeville <mandevip@hotmail.com>


		CHANGES in `multcomp' VERSION 1.1-4

    o   more example data sets


		CHANGES in `multcomp' VERSION 1.1-3

    o   bugfix for models without intercept and more than one factor

    o   print calls when available only

    o   support for coxme objects

    o   allow xlab and ylab arguments for plot.cld

    o   systolic blood pressure data set added


		CHANGES in `multcomp' VERSION 1.1-2

    o   mcp may average over interactions and covariates (Experimental!)

    o   ylim argument to plot

    o   update to survival 2.35-7


		CHANGES in `multcomp' VERSION 1.1-1

    o    better handling of model.frames in `cld'


		CHANGES in `multcomp' VERSION 1.1-0

    o    new compact letter displays

    o    force binary mode when downloading SPSS data files


		CHANGES in `multcomp' VERSION 1.0-8

    o    new vignette containing supplementary material
         for a letter on Pollet \& Nettle (2009, 
         Evolution and Human Behavior)

    o    references updated


		CHANGES in `multcomp' VERSION 1.0-7
