@@ -1,7 +1,7 @@
 Package: multcomp
 Title: Simultaneous Inference in General Parametric Models
-Version: 1.2-0
-Date: 2010-08-11
+Version: 1.2-1
+Date: 2010-09-13
 Author: Torsten Hothorn, Frank Bretz and Peter Westfall and 
   Richard M. Heiberger and Andre Schuetzenmeister
 Description: Simultaneous tests and confidence intervals
