@@ -1,6 +1,0 @@
-
-### check potential coding problems via `codetools'
-if (require("codetools")) {
-    library("multcomp")
-    print(checkUsagePackage("multcomp"))
-}
